--- a/sass/theme/_home.scss
+++ b/sass/theme/_home.scss
@@ -254,8 +254,8 @@
 	.wts_title {
 	    color: #941134;
 	    //background: #7a0c29;
-	    padding: 20px;
-	    margin-top: 80px;
+	    //padding: 20px;
+	    margin-top: 40px;
 	    h1 {
 	    	font: 100 55px/50px "Raleway", sans-serif;
 	    }
