updated wts landing page

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -22,3 +22,14 @@ h2 {
 .shadow--blue {
 	background: rgba(16, 108, 152,0.6) !important;
 }
+
+.shadow--yellow {
+	background: rgba(241, 178, 14,0.95) !important;
+}
+
+
+
+
+/* 
+*	 Ways to Stay	
+*/
