--- a/css/style.css
+++ b/css/style.css
@@ -8044,12 +8044,21 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Cutive", serif; }
 
+h2 {
+  line-height: 2rem; }
+
 .spacer {
   height: 40px; }
 
 .shadow--blue {
   background: rgba(16, 108, 152, 0.6) !important; }
 
+.shadow--yellow {
+  background: rgba(241, 178, 14, 0.95) !important; }
+
+/* 
+*	 Ways to Stay	
+*/
 .btn-ghost {
   display: inline-block;
   position: relative;
@@ -8699,3 +8708,47 @@ h1, h2, h3, h4, h5, h6 {
 .service-box:hover {
   transition: background-color 0.5s ease;
   background-color: #5f6273; }
+
+.wts-row i {
+  position: absolute;
+  top: 100%;
+  width: auto;
+  margin: auto;
+  text-align: center;
+  font-size: 54px;
+  opacity: 0;
+  color: #FFF;
+  z-index: 99;
+  transition: all 0.2s ease-in-out; }
+  .wts-row i.fa-arrow-circle-o-right {
+    right: 39%; }
+  .wts-row i.fa-plus-circle {
+    left: 39%; }
+
+.wts-row .wts-img {
+  position: relative; }
+  .wts-row .wts-img .shadow {
+    opacity: 0;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.2);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    transition: all 0.2s ease-in-out; }
+  .wts-row .wts-img:hover i {
+    top: 40%;
+    opacity: 1;
+    transition: opacity 1s, top 0.2s; }
+  .wts-row .wts-img:hover .bg-img {
+    transform: scale(1.1);
+    transition: all 0.2s ease-in-out; }
+  .wts-row .wts-img:hover .shadow {
+    opacity: 1;
+    background: rgba(241, 178, 14, 0.95);
+    transition: all 0.2s ease-in-out; }
+  .wts-row .wts-img:hover .title {
+    opacity: 0;
+    margin-bottom: -10px;
+    transition: all 0.4s ease-in-out; }
